# msg_split

./: README.md  msg_split.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_sample_msg_split.sh  tmp.html
tests/: test.html  test_split_message.py
