[tool.poetry]
name = "msg-split"
version = "0.1.0"
description = "A tool to split HTML messages into fragments"
authors = ["unker <kfi.unknown@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "5.3.0"
click = "8.1.8"
typing-extensions = "4.12.2"
pytest = "8.3.4"
pytest-cov = "5.0.0"
coverage = "7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
